[package]
name = "espidf-apa102"
version = "0.1.0"
authors = ["Anatol Ulrich"]
edition = "2021"
resolver = "2"

[dependencies]
esp-idf-sys = { version = "=0.32.1", features = ["binstart", "native"] }
esp-idf-svc = { version = "=0.45.0", features = ["alloc"] }
embedded-svc = "=0.24.0"
esp-idf-hal = "=0.40.1"
bytemuck = { version = "1", features = ["derive"] }
rgb = "0.8.34"

[build-dependencies]
embuild = "=0.31.1"
anyhow = "1"
